# Azure-AI

./: .env.example  .gitignore  README.md  chat_completion.py  image_generation.py  llm.py  pyproject.toml  stream_completion.py
projects/cloudxeus/: bot_cli.py  chat_model.py
rag/: rag_vector_demo.py
responsible_ai/: content_safety.py
src/clu/: anaysis.py
src/document_intelligence/: anaysis.py  client.py  hand_written_image.py
src/llm/: chat_completion.py  image_generation.py  model_client.py  stream_completion.py
src/nlp/: client.py  text_analysis.py
src/rag/: basic_rag.py
src/speech/: client.py  speech_to_speech.py  speech_to_text.py  speech_to_text_using_microphone.py  ssml.py  text_to_speech.py
src/translator/: client.py
src/vision_ai/custom/: client.py  image_analysis.py
src/vision_ai/face/: client.py  face_analysis.py
src/vision_ai/image/: image_analysis.py  ocr_analysis.py
vision_ai/: client.py  image_analysis.py  ocr_analysis.py
